--- a/Administracion/backend/cloudbuild.yaml
+++ b/Administracion/backend/cloudbuild.yaml
@@ -4,50 +4,49 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/fichaje-backend:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/fichaje-backend:latest'
-      - './Administracion/backend'
+      - 'gcr.io/$PROJECT_ID/appcontrolarmenia:latest'
+      - '.'
 
   # Step 2: Hacer push de la imagen a Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/fichaje-backend:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
 
   # Step 3: Desplegar a Cloud Run
-  - name: 'gcr.io/cloud-builders/run'
+  - name: 'gcr.io/cloud-builders/gke-deploy'
     args:
+      - run
+      - '--filename=.'
+      - '--image=gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
+      - '--location=europe-west1'
+      - '--cluster=appcontrolarmenia'
+
+  # Alternativa: Si prefieres usar gcloud run deploy directamente
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
       - 'deploy'
-      - 'fichaje-backend'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/fichaje-backend:$SHORT_SHA'
-      - '--region'
-      - 'us-central1'
-      - '--platform'
-      - 'managed'
-      - '--memory'
-      - '512Mi'
-      - '--cpu'
-      - '1'
-      - '--timeout'
-      - '60'
-      - '--set-env-vars'
-      - 'INSTANCE_CONNECTION_NAME=$_INSTANCE_CONNECTION_NAME,DB_USER=$_DB_USER,DB_PASS=$_DB_PASS,DB_NAME=$_DB_NAME,USE_PRIVATE_IP=$_USE_PRIVATE_IP'
+      - 'appcontrolarmenia'
+      - '--image=gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
+      - '--region=europe-west1'
+      - '--platform=managed'
+      - '--memory=512Mi'
+      - '--cpu=1'
+      - '--timeout=60'
       - '--allow-unauthenticated'
+      - '--set-env-vars=INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME}'
 
-# Configuración de imágenes
 images:
-  - 'gcr.io/$PROJECT_ID/fichaje-backend:$SHORT_SHA'
-  - 'gcr.io/$PROJECT_ID/fichaje-backend:latest'
+  - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/appcontrolarmenia:latest'
 
-# Tiempo de timeout para la construcción
 timeout: '1800s'
 
-# Variables de sustitución (configurar en Cloud Build)
 substitutions:
-  _INSTANCE_CONNECTION_NAME: 'your-project:us-central1:postgresql-instance'
+  _INSTANCE_CONNECTION_NAME: 'your-project:europe-west1:postgresql-instance'
   _DB_USER: 'postgres'
   _DB_PASS: 'your-password'
   _DB_NAME: 'fichajes_db'
-  _USE_PRIVATE_IP: 'false'
