--- a/Administracion/backend/cloudbuild.yaml
+++ b/Administracion/backend/cloudbuild.yaml
@@ -1,5 +1,8 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
-  # Step 1: Construir la imagen de Docker
+  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
@@ -9,44 +12,70 @@ steps:
       - 'gcr.io/$PROJECT_ID/appcontrolarmenia:latest'
       - '.'
 
-  # Step 2: Hacer push de la imagen a Container Registry
+  # Step 2: Push image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
       - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
 
-  # Step 3: Desplegar a Cloud Run
-  - name: 'gcr.io/cloud-builders/gke-deploy'
-    args:
-      - run
-      - '--filename=.'
-      - '--image=gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
-      - '--location=europe-west1'
-      - '--cluster=appcontrolarmenia'
-
-  # Alternativa: Si prefieres usar gcloud run deploy directamente
+  # Step 3: Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
-      - 'appcontrolarmenia'
-      - '--image=gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
-      - '--region=europe-west1'
-      - '--platform=managed'
-      - '--memory=512Mi'
-      - '--cpu=1'
-      - '--timeout=60'
-      - '--allow-unauthenticated'
-      - '--set-env-vars=INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME}'
+      options:
+        logging: CLOUD_LOGGING_ONLY
 
-images:
-  - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
-  - 'gcr.io/$PROJECT_ID/appcontrolarmenia:latest'
+      steps:
+        # 1) Build image from backend Dockerfile
+        - name: 'gcr.io/cloud-builders/docker'
+          args:
+            - 'build'
+            - '-t'
+            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
+            - '-t'
+            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
+            - '-f'
+            - 'Administracion/backend/Dockerfile'
+            - 'Administracion/backend'
 
-timeout: '1800s'
+        # 2) Push both tags to Container Registry
+        - name: 'gcr.io/cloud-builders/docker'
+          args:
+            - 'push'
+            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
 
-substitutions:
-  _INSTANCE_CONNECTION_NAME: 'your-project:europe-west1:postgresql-instance'
-  _DB_USER: 'postgres'
-  _DB_PASS: 'your-password'
-  _DB_NAME: 'fichajes_db'
+        - name: 'gcr.io/cloud-builders/docker'
+          args:
+            - 'push'
+            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
+
+        # 3) Deploy to Cloud Run (managed)
+        - name: 'gcr.io/cloud-builders/gcloud'
+          entrypoint: 'bash'
+          args:
+            - '-c'
+            - |
+              set -e
+              gcloud run deploy appcontrolarmenia \
+                --image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA \
+                --region=europe-west1 \
+                --platform=managed \
+                --memory=512Mi \
+                --cpu=1 \
+                --timeout=60s \
+                --allow-unauthenticated \
+                --set-env-vars="INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}"
+
+      images:
+        - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
+        - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
+
+      timeout: '1800s'
+
+      substitutions:
+        _INSTANCE_CONNECTION_NAME: 'your-project:europe-west1:postgresql-instance'
+        _DB_USER: 'postgres'
+        _DB_PASS: 'your-password'
+        _DB_NAME: 'fichajes_db'
+        _USE_PRIVATE_IP: 'false'
