--- a/Administracion/backend/cloudbuild.yaml
+++ b/Administracion/backend/cloudbuild.yaml
@@ -55,103 +55,79 @@ steps:
             echo "ERROR: No _DB_PASS substitution and Secret Manager secret 'APP_DB_PASSWORD' not found."
             exit 1
           fi
-        else
-          DB_PASS="${_DB_PASS}"
-        fi
+        options:
+          logging: CLOUD_LOGGING_ONLY
 
-        gcloud run deploy appcontrolarmenia \
-          --image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA \
-          --region=europe-west1 \
-          --platform=managed \
-          --memory=512Mi \
-          --cpu=1 \
-          --timeout=60s \
-          --allow-unauthenticated \
-          --set-env-vars="INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}"
+        # NOTE: Do NOT store secrets (passwords) in this file. Prefer using Cloud Build
+        # substitutions at trigger time or Google Secret Manager. This pipeline will
+        # attempt to read `_DB_PASS` from a substitution; if missing it will try to
+        # read the secret `APP_DB_PASSWORD` from Secret Manager.
 
-images:
-  - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
-  - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
+        substitutions:
+          # Provided defaults (non-sensitive). Replace these in the Cloud Build trigger
+          # or pass them at build time via `--substitutions`.
+          _INSTANCE_CONNECTION_NAME: 'juan-diego-susunaga:us-central1:controldeobranexus'
+          _DB_USER: 'app_user'
+          _DB_NAME: 'controldeobranexus'
+          _USE_PRIVATE_IP: 'true'
 
-timeout: '1800s'
-options:
-  logging: CLOUD_LOGGING_ONLY
+        steps:
+          # 1) Build the backend image using the backend Dockerfile and context
+          - name: 'gcr.io/cloud-builders/docker'
+            args:
+              - 'build'
+              - '-t'
+              - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
+              - '-t'
+              - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
+              - '-f'
+              - 'Administracion/backend/Dockerfile'
+              - 'Administracion/backend'
 
-steps:
-  # Step 1: Build Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'build'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/appcontrolarmenia:latest'
-      - '.'
+          # 2) Push the built image (short sha)
+          - name: 'gcr.io/cloud-builders/docker'
+            args:
+              - 'push'
+              - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
 
-  # Step 2: Push image
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'push'
-      - 'gcr.io/$PROJECT_ID/appcontrolarmenia:$SHORT_SHA'
+          # 3) Push the :latest tag as well
+          - name: 'gcr.io/cloud-builders/docker'
+            args:
+              - 'push'
+              - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
 
-  # Step 3: Deploy to Cloud Run
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'run'
-      - 'deploy'
-      options:
-        logging: CLOUD_LOGGING_ONLY
+          # 4) Deploy to Cloud Run (managed). This step will look for `_DB_PASS`.
+          - name: 'gcr.io/cloud-builders/gcloud'
+            entrypoint: 'bash'
+            args:
+              - '-c'
+              - |
+                set -euo pipefail
+                # If _DB_PASS substitution is empty, try Secret Manager
+                if [ -z "${_DB_PASS:-}" ]; then
+                  echo "_DB_PASS substitution not provided. Trying Secret Manager secret 'APP_DB_PASSWORD'..."
+                  if gcloud secrets versions access latest --secret="APP_DB_PASSWORD" >/dev/null 2>&1; then
+                    DB_PASS="$(gcloud secrets versions access latest --secret="APP_DB_PASSWORD")"
+                  else
+                    echo "ERROR: No _DB_PASS substitution and Secret Manager secret 'APP_DB_PASSWORD' not found."
+                    exit 1
+                  fi
+                else
+                  DB_PASS="${_DB_PASS}"
+                fi
 
-      steps:
-        # 1) Build image from backend Dockerfile
-        - name: 'gcr.io/cloud-builders/docker'
-          args:
-            - 'build'
-            - '-t'
-            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
-            - '-t'
-            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
-            - '-f'
-            - 'Administracion/backend/Dockerfile'
-            - 'Administracion/backend'
+                gcloud run deploy appcontrolarmenia \
+                  --image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA \
+                  --region=europe-west1 \
+                  --platform=managed \
+                  --memory=512Mi \
+                  --cpu=1 \
+                  --timeout=60s \
+                  --allow-unauthenticated \
+                  --set-env-vars="INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}"
 
-        # 2) Push both tags to Container Registry
-        - name: 'gcr.io/cloud-builders/docker'
-          args:
-            - 'push'
-            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
+        images:
+          - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
+          - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
 
-        - name: 'gcr.io/cloud-builders/docker'
-          args:
-            - 'push'
-            - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
-
-        # 3) Deploy to Cloud Run (managed)
-        - name: 'gcr.io/cloud-builders/gcloud'
-          entrypoint: 'bash'
-          args:
-            - '-c'
-            - |
-              set -e
-              gcloud run deploy appcontrolarmenia \
-                --image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA \
-                --region=europe-west1 \
-                --platform=managed \
-                --memory=512Mi \
-                --cpu=1 \
-                --timeout=60s \
-                --allow-unauthenticated \
-                --set-env-vars="INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}"
-
-      images:
-        - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
-        - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
-
-      timeout: '1800s'
-
-      substitutions:
-        _INSTANCE_CONNECTION_NAME: 'your-project:europe-west1:postgresql-instance'
-        _DB_USER: 'app_user'
-        _DB_PASS: 'Usuario2025-'
-        _DB_NAME: 'fichajes_db'
-        _USE_PRIVATE_IP: 'false'
+        timeout: '1800s'
