--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,20 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
+# Root cloudbuild.yaml - orchestrates backend build and deployment
+# Do NOT store secrets here. Use Cloud Build substitutions at trigger time
+# or Cloud Secret Manager. The _DB_PASS substitution will be read from
+# Secret Manager if not provided by the trigger.
+
+substitutions:
+  # Non-sensitive defaults (override in trigger or via --substitutions)
+  _INSTANCE_CONNECTION_NAME: 'juan-diego-susunaga:us-central1:controldeobranexus'
+  _DB_USER: 'app_user'
+  _DB_NAME: 'controldeobranexus'
+  _USE_PRIVATE_IP: 'true'
+
 steps:
-  # Build the Docker image
+  # 1) Build the backend image from Administracion/backend/Dockerfile
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
@@ -11,36 +26,51 @@ steps:
       - 'Administracion/backend/Dockerfile'
       - 'Administracion/backend'
 
-  # Push to Container Registry
+  # 2) Push image with short SHA tag
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend'
+      - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
 
-  # Deploy to Cloud Run
-  - name: 'gcr.io/cloud-builders/gcloud'
+  # 3) Push image with latest tag
+  - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'run'
-      - 'deploy'
-      - 'appcontrolarmenia'
-      - '--image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
-      - '--region=europe-west1'
-      - '--platform=managed'
-      - '--memory=512Mi'
-      - '--cpu=1'
-      - '--timeout=60'
-      - '--allow-unauthenticated'
-      - '--set-env-vars'
-      - 'INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=false'
+      - 'push'
+      - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
+
+  # 4) Deploy to Cloud Run (managed) in us-central1 with Cloud SQL connection
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        set -euo pipefail
+        # If _DB_PASS substitution is empty, try Secret Manager
+        if [ -z "${_DB_PASS:-}" ]; then
+          echo "_DB_PASS substitution not provided. Trying Secret Manager secret 'APP_DB_PASSWORD'..."
+          if gcloud secrets versions access latest --secret="APP_DB_PASSWORD" >/dev/null 2>&1; then
+            DB_PASS="$(gcloud secrets versions access latest --secret="APP_DB_PASSWORD")"
+          else
+            echo "ERROR: No _DB_PASS substitution and Secret Manager secret 'APP_DB_PASSWORD' not found."
+            exit 1
+          fi
+        else
+          DB_PASS="${_DB_PASS}"
+        fi
+
+        gcloud run deploy appcontrolarmenia \
+          --image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA \
+          --region=us-central1 \
+          --platform=managed \
+          --memory=512Mi \
+          --cpu=1 \
+          --timeout=60s \
+          --allow-unauthenticated \
+          --add-cloudsql-instances="${_INSTANCE_CONNECTION_NAME}" \
+          --set-env-vars="INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}"
 
 images:
   - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
   - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
 
 timeout: '1800s'
-
-substitutions:
-  _INSTANCE_CONNECTION_NAME: 'your-project:europe-west1:postgresql-instance'
-  _DB_USER: 'postgres'
-  _DB_PASS: 'your-password'
-  _DB_NAME: 'fichajes_db'
