--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,6 +12,7 @@ substitutions:
   _DB_USER: 'app_user'
   _DB_NAME: 'controldeobranexus'
   _USE_PRIVATE_IP: 'true'
+  _DB_PASS_SECRET_NAME: 'APP_DB_PASSWORD' # Define the secret name here
 
 steps:
   # 1) Build the backend image from Administracion/backend/Dockerfile
@@ -40,37 +41,32 @@ steps:
 
   # 4) Deploy to Cloud Run (managed) in us-central1 with Cloud SQL connection
   - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: 'bash'
     args:
-      - '-c'
-      - |
-        set -euo pipefail
-        # If _DB_PASS substitution is empty, try Secret Manager
-        if [ -z "${_DB_PASS:-}" ]; then
-          echo "_DB_PASS substitution not provided. Trying Secret Manager secret 'APP_DB_PASSWORD'..."
-          if gcloud secrets versions access latest --secret="APP_DB_PASSWORD" >/dev/null 2>&1; then
-            DB_PASS="$(gcloud secrets versions access latest --secret="APP_DB_PASSWORD")"
-          else
-            echo "ERROR: No _DB_PASS substitution and Secret Manager secret 'APP_DB_PASSWORD' not found."
-            exit 1
-          fi
-        else
-          DB_PASS="${_DB_PASS}"
-        fi
-
-        gcloud run deploy appcontrolarmenia \
-          --image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA \
-          --region=us-central1 \
-          --platform=managed \
-          --memory=512Mi \
-          --cpu=1 \
-          --timeout=60s \
-          --allow-unauthenticated \
-          --add-cloudsql-instances="${_INSTANCE_CONNECTION_NAME}" \
-          --set-env-vars="INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_PASS=${DB_PASS},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}"
+      - 'run'
+      - 'deploy'
+      - 'appcontrolarmenia'
+      - '--image=gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
+      - '--region=us-central1'
+      - '--platform=managed'
+      - '--memory=512Mi'
+      - '--cpu=1'
+      - '--timeout=60s'
+      - '--allow-unauthenticated'
+      - '--add-cloudsql-instances="${_INSTANCE_CONNECTION_NAME}"'
+      - '--set-env-vars=INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}'
+      # This is the crucial part: directly set the secret as an environment variable using --set-secrets
+      - '--set-secrets=DB_PASS=projects/$PROJECT_ID/secrets/${_DB_PASS_SECRET_NAME}:latest'
 
 images:
   - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
   - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:latest'
 
 timeout: '1800s'
+
+# Define how secrets from Secret Manager are made available during the build
+# This block is for Cloud Build's internal use if a step needed to access the secret directly.
+# For Cloud Run, the --set-secrets flag handles the runtime injection.
+availableSecrets:
+  secretManager:
+  - versionName: projects/$PROJECT_ID/secrets/${_DB_PASS_SECRET_NAME}/versions/latest
+    env: DB_PASS_FROM_SECRET # This is an arbitrary environment variable name for Cloud Build's use
