--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,7 +55,7 @@ steps:
       - '--add-cloudsql-instances="${_INSTANCE_CONNECTION_NAME}"'
       - '--set-env-vars=INSTANCE_CONNECTION_NAME=${_INSTANCE_CONNECTION_NAME},DB_USER=${_DB_USER},DB_NAME=${_DB_NAME},USE_PRIVATE_IP=${_USE_PRIVATE_IP}'
       # This is the crucial part: directly set the secret as an environment variable using --set-secrets
-      - '--set-secrets=DB_PASS=projects/$PROJECT_ID/secrets/${_DB_PASS_SECRET_NAME}:latest'
+      - '--set-secrets=DB_PASS=${_DB_PASS_SECRET_NAME}:latest'
 
 images:
   - 'gcr.io/$PROJECT_ID/appcontrolarmenia-backend:$SHORT_SHA'
